--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+  <link rel="stylesheet" href="normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans" rel="stylesheet">
+
   <link rel="stylesheet" href="main.css">
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
+  <div class="header">
+    <div class="contents">
+      <h1>Arvind Hariharan Nair</h1>
+      <h2>Student</h2>
+    </div>
+  </div>
+  <div class="tagline">
+    <h3>More about me</h3>
+    <p>Hey there, I'm Arvind and I'm an Engineering student doing my majors in computer Science</p>
+  </div>
+  <div class="skills">
+    <h3>Skills</h3>
+    <p>Here are some of the skills that I've accuried over the course of 2 years:</p>
+    <ul class="skill_list">
+      <li>Java</li>
+      <li>python</li>
+      <li>C</li>
+      <li>C++</li>
+      <li>HTML & CSS</li>
+      <li>php</li>
+      <li>SQL</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Contact Me</h3>
+    <p>you can find me on the following social media</p>
+    <ul>
+      <li><a href="#">facebook</a></li>
+      <li><a href="#">instagram</a></li>
+    </ul>
+  </div>
 
 </body>
 </html>
