--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,11 @@
   </div>
   <div class="contact">
     <h3>Contact Me</h3>
-    <p>you can find me on the following social media</p>
+    <p>you can find me on the following social media
     <ul>
       <li><a href="#">facebook</a></li>
       <li><a href="#">instagram</a></li>
+    </p>
     </ul>
   </div>
 
