--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,6 @@
   </div>
   <div class="contact">
     <h3>Contact Me</h3>
-    <p>you can find me on the following social media
-    <ul>
-      <li><a href="#">facebook</a></li>
-      <li><a href="#">instagram</a></li>
-    </p>
-    </ul>
-  </div>
-
+    <p>you can find me on the following social media<a href="#">facebook</a><a href="#">instagram</a>.</p>
 </body>
 </html>
